name:                transliterate
version:             0.1.0.0
synopsis:            A library for transliterating Korean Hangeul to the latin alphabet and vice versa. Can be used from Haskell, Fay, and JavaScript.
description:         See: http://www.github.com/bergmark/transliterate
license:             BSD3
license-file:        LICENSE
bug-reports:         https://github.com/bergmark/transliterate/issues
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2013 Adam Bergmark
category:            Language, Fay
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
data-files:
  src/Translit/Fay.hs
  src/Translit/Hangeul.hs

source-repository head
  type: git
  location: https://github.com/bergmark/transliterate.git

library
  exposed-modules:     Translit.Hangeul
  other-modules:       Translit.Fay, Translit.GHC
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base       == 4.*
    , fay        == 0.18.*
    , fay-jquery == 0.5.*
    , fay-text   == 0.3.*
    , regex-pcre-builtin
    , split      == 0.2.*
    , text       >= 0.10 && < 0.12
